Modified select options

--- a/code/index.html
+++ b/code/index.html
@@ -28,24 +28,32 @@
         <div class="select">
             <select name="f2" id="f2">
                 <option value="" disabled selected>Select..</option>
-                <option value="yes">Yes</option>
-                <option value="no">No</option>
+                <option value="first">Freshman</option>
+                <option value="second">Sophomore</option>
+                <option value="third">Junior</option>
+                <option value="fourth">Senior</option>
             </select>
         </div>
         <p>What is your GPA?</p>
         <div class="select">
             <select name="f3" id="f3">
                 <option value="" disabled selected>Select..</option>
-                <option value="yes">Yes</option>
-                <option value="no">No</option>
+                <option value="low">1.0 - 1.9</option>
+                <option value="passing">2.0 - 2.9</option>
+                <option value="average">3.0 - 3.4</option>
+                <option value="high">3.5 - 4.0</option>
             </select>
         </div>
         <p>Are you in any clubs related to your major?</p>
         <div class="select">
             <select name="f4" id="f4">
                 <option value="" disabled selected>Select..</option>
-                <option value="yes">Yes</option>
-                <option value="no">No</option>
+                <option value="none">Not in any club</option>
+                <option value="acm">ACM / ACM - W</option>
+                <option value="rover">Titan Rover</option>
+                <option value="oss">Offensive Security Society</option>
+                <option value="game">Video Game Development Club</option>
+                <option value="data">Data Science and Machine Learning Club</option>
             </select>
         </div>
         <p>Have you had any previous professional experience related to Computer Science?</p>
