Working submit button

--- a/code/index.html
+++ b/code/index.html
@@ -18,7 +18,7 @@
     <div class="select-container">
         <p>Are you a first generation student?</p>
         <div class="select">
-            <select name="f1" id="f1">
+            <select name="f1" class="f1">
                 <option value="" disabled selected>Select..</option>
                 <option value="yes">Yes</option>
                 <option value="no">No</option>
@@ -26,7 +26,7 @@
         </div>
         <p>What is your class standing?</p>
         <div class="select">
-            <select name="f2" id="f2">
+            <select name="f2" class="f2">
                 <option value="" disabled selected>Select..</option>
                 <option value="first">Freshman</option>
                 <option value="second">Sophomore</option>
@@ -36,7 +36,7 @@
         </div>
         <p>What is your GPA?</p>
         <div class="select">
-            <select name="f3" id="f3">
+            <select name="f3" class="f3">
                 <option value="" disabled selected>Select..</option>
                 <option value="low">1.0 - 1.9</option>
                 <option value="passing">2.0 - 2.9</option>
@@ -46,7 +46,7 @@
         </div>
         <p>Are you in any clubs related to your major?</p>
         <div class="select">
-            <select name="f4" id="f4">
+            <select name="f4" class="f4">
                 <option value="" disabled selected>Select..</option>
                 <option value="none">Not in any club</option>
                 <option value="acm">ACM / ACM - W</option>
@@ -58,7 +58,7 @@
         </div>
         <p>Have you had any previous professional experience related to Computer Science?</p>
         <div class="select">
-            <select name="f5" id="f5">
+            <select name="f5" class="f5">
                 <option value="" disabled selected>Select..</option>
                 <option value="yes">Yes</option>
                 <option value="no">No</option>
