--- a/code/index.html
+++ b/code/index.html
@@ -72,7 +72,7 @@
         </button>
     </form>
 
-    <script type="text/javascript" src="./jsbayes.js"></script>
+<!--     <script type="text/javascript" src="./jsbayes.js"></script> -->
     <script src="./app.js"></script>
     
 </body>
