moved bayes computation to cpt.js

--- a/code/index.html
+++ b/code/index.html
@@ -71,8 +71,9 @@
             Submit
         </button>
     </form>
-
+    
     <script type="text/javascript" src="./jsbayes.js"></script>
+    <script type="text/javascript" src="./cpt.js"></script>
     <script src="./app.js"></script>
     
 </body>
